# trsim

./: .gitignore  .importlinter  AGENT_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  GOVERNANCE.md  HOWTO.md  LICENSE  NOTICE  OPEN_QUESTIONS.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  pyproject.toml  setup_phase0.sh  setup_phase0_4.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
competitive_analysis/: TRsim_competitive_v0.1.md  baseline_audit_v0.1.md
debug/: README.md
debug/backend/: README.md
debug/frontend/: README.md
debug/frontend/scene3d_resize_ghost/: README.md  panel_isolation.py
docs/: MVP_GUIDE.md  MVP_STATUS.md  MVP_USAGE.md  MVP_VERIFICATION_TREE.md  REVIEW_REPORT_v0.35.md  TRsim_README.md
docs/agent_workflows/: README.md  ci_status.md  mvp_status_update.md  phase_status.md  sync_check.md
docs/design/: README.md
docs/design/simulator/: README.md  scene_3d_panel.md
docs/dev_guide/: creating_dlc.md
docs/hil/: phase_8_specifications_pending.md
docs/matlab_validation/: AUTOMATION.md  README.md  test_antenna.m  test_atmosphere.m  test_ballistic.m  test_extended_target.m  test_fmcw.m  test_forces.m  test_geometry.m  test_horizon.m  test_multipath.m  test_rcs.m  test_reference.m  test_rigid_body.m  test_solver_rk4.m  test_surface_vessel.m
docs/sessions/: README.md  _ci_log.md  mvp_completion_2026_05_14.md  mvp_hand_test_in_progress_2026_05_15.md  mvp_status_gap_report_2026_05_12.md  phase_1_complete.md  phase_2_3d_target.md  phase_2_4_dynamics.md  phase_2_5_atmosphere.md  phase_2_6_antenna.md  phase_2_7_extended_target.md  phase_2_progress.md  phase_3_app_layer.md  phase_3_missing_modules_2026_05_13.md  phase_4_completion_2026_05_14.md  phase_4_dem_import_wizard_2026_05_13.md  phase_4_domain_settings_2026_05_13.md  phase_4_editor_simulator_2026_05_14_handoff.md  phase_4_l1_run_panel_2026_05_13.md  phase_4_l2_fft_panel_2026_05_14.md  phase_4_l3_rd_panel_2026_05_14.md  phase_4_ui_layout.md  phase_5_6_7_2026_05_11_handoff.md  phase_5_additional_followup_2026_05_13.md  phase_5_followup_2026_05_13.md  phase_5_followup_handoff_2026_05_12.md  phase_5_verification_kickoff.md  phase_6_augmentation_2026_05_13.md  phase_7_dlc_cli_2026_05_13.md  phase_7_menu_wiring_2026_05_13.md  phase_9_1_abc_handoff_2026_05_12.md  phase_9_1_complete_handoff_2026_05_12.md  phase_9_2_complete_handoff_2026_05_12.md  phase_9_3_complete_handoff_2026_05_12.md  phase_9_library_models_2026_05_13.md  phase_9_mainwindow_autoregister_2026_05_13.md  phase_9_plugin_discovery_2026_05_13.md  phase_9_validation_simulator_polish_2026_05_13.md  phase_mvp_a_handoff_2026_05_12.md  session_2026_05_13_multi_cycle_handoff.md  (+4 more)
examples/dlc/simple_pairing_demo/: README.md  manifest.toml
plan/: 00_README.md  01_vision_scope.md  02_architecture.md  03_data_model.md  04_migration.md  05_ui_ux.md  06_topics.md  07_nn_integration.md  08_radar_waveforms.md  09_radar_platforms.md  10_workspaces.md  11_coordinate_systems.md  12_placement_and_motion.md  13_editor_workspace.md  14_dynamics_model.md  15_atmosphere_model.md  16_baseline_audit.md  17_open_platform.md  18_hil_integration.md  19_physics_lab.md  appendix_A_code_audit.md  appendix_B_glossary.md
scripts/: run_octave_validation.sh
scripts/githooks/: README.md  pre-commit  setup_hooks.sh
src/workbench/: __init__.py  __main__.py
src/workbench/app/: __init__.py  bundle_service.py  command_bus.py  command_evaluator.py  command_registry.py  dem_wizard.py  dlc_runtime.py  event_bus.py  input_buffer.py  physics_gate.py  plugin_loader.py  plugin_scanner.py  probe_recorder.py  resource_cache.py  resource_library.py  run_manager.py  scenario_service.py  simulation_clock.py
src/workbench/cli/: __init__.py  main.py
src/workbench/domain/: __init__.py  building.py  coherence_validator.py  geo.py  map_resource.py  pipeline.py  placement.py  platform.py  scenario.py  simulation_domain.py  target.py  types.py  wave_response.py
src/workbench/io/: __init__.py  dem_import.py  package_io.py  run_storage.py  trace_storage.py
src/workbench/physics/: __init__.py  antenna.py  atmosphere.py  geometry.py  monopulse.py  planar_array.py
src/workbench/plugins_builtin/: __init__.py
src/workbench/sdk/: __init__.py  manifest.py  package_builder.py  package_validator.py  protocols.py  resource_schemas.py  test_harness.py
src/workbench/ui/: __init__.py  dlc_bootstrap.py  dock_manager.py  main_menu.py  main_window.py  panel_registry.py  workspace_selector.py
tests/: __init__.py  conftest.py
tests/integration/: test_sample_dlc_end_to_end.py
tests/physics/: __init__.py  golden_dataset.py  test_atmosphere_isa.py  test_ballistic_analytic.py  test_cfar_detector.py  test_dynamics_forces.py  test_extended_target_glint.py  test_extended_target_glint_rms.py  test_extended_target_glint_rms_multi.py  test_fmcw_propagation.py  test_fmcw_signal.py  test_frame_profiler_reproducibility.py  test_geometry.py  test_golden_dataset.py  test_horizon.py  test_monopulse_error.py  test_multipath_horizon_golden.py  test_parabolic_antenna.py  test_planar_array_element.py  test_radar_equation.py  test_rcs_single.py  test_reference_timing_reproducibility.py  test_two_ray_multipath.py
tests/physics/golden/: atmosphere_isa.json  dynamics_forces.json  extended_target_glint.json  fmcw_propagation.json  multipath_horizon.json  parabolic_antenna.json  radar_equation_snr.json
tests/unit/app/: test_bundle_service.py  test_command_bus.py  test_command_evaluator.py  test_dem_wizard.py  test_dlc_installer.py  test_dlc_package_manager.py  test_dlc_plugin_loader.py  (+18 more)
ui_mockups/editor_workspace/: SPEC.md
ui_mockups/v0.38_hil/: SPEC.md
ui_mockups/v0.39_reference_timing/: SPEC.md
ui_mockups/v0.40_nn_training/: SPEC.md
ui_mockups/v0.40_physics_lab/: SPEC.md
ui_mockups/v0.40_plugin_manager/: SPEC.md
ui_mockups/v0.40_scenario_editor/: SPEC.md
ui_mockups/v0.40_simulator/: SPEC.md
ui_mockups/v0.40_welcome/: SPEC.md
(+336 files in other folders)
