# pyproject.toml — TRsim Workbench
#
# Phase 0 초안 (v0.37). 의존성·dev tools·classifiers·tool 설정 포함.
# Phase 0 시작 시 이 파일을 레포 루트로 복사 후, 미세 조정 (URL·author 등 <TBD> 부분).

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "trsim"
version = "0.1.0a0"
description = "Open-source workbench platform for tracking radar algorithm development, validation, and NN integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "TRsim Contributors" },
]
keywords = [
    "radar",
    "tracking",
    "simulation",
    "fmcw",
    "monopulse",
    "neural-network",
    "kalman-filter",
    "phased-array",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Core 런타임 의존성 (06 § 6.5 의존성 매트릭스 기준)
dependencies = [
    # GUI
    "PySide6>=6.7,<7.0",                 # LGPL-3, 동적 링크 OK
    "pyqtgraph>=0.13",                   # MIT — 2D plots (FFT, range-doppler)

    # 3D 시각화 (v0.28 채택)
    "PyVista>=0.43",                     # MIT — 3D Scene View
    # vtk는 PyVista가 끌어옴

    # 수치
    "numpy>=1.26,<3.0",
    "scipy>=1.11",                       # Hungarian (data_associator), UKF sigma point
    "pandas>=2.0",                       # io 레이어에서만 사용 (Domain 오염 금지 — 04 § 4.4 함정 3)

    # 저장
    "h5py>=3.10",                        # Trace HDF5

    # 시스템
    "watchdog>=3.0",                     # Plugin hot-reload
    "structlog>=24.1",                   # 구조화 로깅

    # 설정·packaging
    # tomllib은 Python 3.11+ 표준 — 별도 의존성 불필요
    # tomli-w는 manifest 작성용 (옵션)
]


[project.optional-dependencies]
# 개발 도구 (CI ci.yml + 사용자 hand-test). Phase 4 본격 가동 후
# pytest-qt + pyvistaqt 는 거의 모든 GUI 테스트에서 필요하므로
# `dev` 가 ui-dev 도 포함하도록 통합 (2026-05-14 MVP 완성 시점).
# CI Linux 환경은 libegl1 등 system deps 가 ci.yml 에서 별도 설치.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",                    # Qt 위젯 테스트 (Phase 4)
    "pyvistaqt>=0.11",                   # PyVista QtInteractor (Phase 4.9)
    "ruff>=0.5.0",                       # lint + format
    "mypy>=1.10",                        # type check
    "import-linter>=2.0",                # 의존 규칙 강제 (02 § 2.5)
]

# 후방 호환 — 옛 ``pip install -e ".[ui-dev]"`` 호출이 깨지지 않도록
# alias 로 남겨둠. Phase 4 본격 가동 이후 모든 GUI 테스트가
# pytest-qt + pyvistaqt 를 요구하므로 ``[dev]`` 와 사실상 동일.
ui-dev = [
    "pytest-qt>=4.4",
    "pyvistaqt>=0.11",
]

# NN 통합 (Phase 6, MVP+α)
nn = [
    "torch>=2.0",                        # 또는 tensorflow
    "scikit-learn>=1.3",
]

# DLC 작성·테스트 (v0.35, MVP+α)
sdk = [
    "tomli-w>=1.0",                      # manifest.toml 작성
    "packaging>=23.0",                   # SemVer·PEP 440 검증
]

# 단위 변환 (T4 — pint 도입 미결정, 06 § 6.7)
units = [
    "pint>=0.23",
]


[project.urls]
Homepage = "https://github.com/<TBD>/trsim"
Documentation = "https://github.com/<TBD>/trsim/tree/main/docs/plan"
Repository = "https://github.com/<TBD>/trsim.git"
Issues = "https://github.com/<TBD>/trsim/issues"
Changelog = "https://github.com/<TBD>/trsim/blob/main/CHANGELOG.md"


[project.scripts]
# `trsim` CLI 엔트리포인트
trsim = "workbench.__main__:main"
# `trsim sdk` — DLC 작성자용 (build/test/validate)
# 실제 sub-command 라우팅은 workbench.sdk.cli 안에서


# ----- setuptools 설정 -----

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
workbench = [
    "py.typed",                          # 타입 힌트 패키지 표시
]


# ----- ruff (lint + format) -----

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    "docs",
    "data",
    "scenarios",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
    "N812",  # lowercase imported as non-lowercase (numpy as np 등 표준)
]

[tool.ruff.lint.per-file-ignores]
# tests/ 는 pytest 컨벤션 따름:
#   B011: assert 허용
#   S101: assert in tests OK
#   SIM300: pytest 의 `actual == expected` 패턴 — pytest.approx 좌변에 두라는 ruff 의 Yoda 규칙은 pytest 컨벤션과 충돌
"tests/**/*.py" = ["B011", "S101", "SIM300"]
"src/workbench/sdk/protocols.py" = ["UP"]  # Protocol 정의는 명시적 typing

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# ----- mypy (type check) -----

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

# 외부 라이브러리 type stubs 부재 처리
[[tool.mypy.overrides]]
module = [
    "pyqtgraph.*",
    "pyvista.*",
    "pyvistaqt.*",
    "vtk.*",
    "h5py.*",
    "watchdog.*",
    "scipy.*",
]
ignore_missing_imports = true


# ----- pytest -----

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: integration tests (cross-module)",
    "physics: physics/golden dataset tests",
    "qt: tests requiring Qt event loop",
    "gpu: tests requiring GPU (Phase 6 NN)",
]


# ----- coverage -----

[tool.coverage.run]
branch = true
source = ["src/workbench"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "class .*\\bProtocol\\):",
]


# ----- import-linter (의존 규칙 강제) -----
# 02 § 2.5 의존성 규칙을 자동 검사. 자세한 contract는 별도 .importlinter 파일에.
# 핵심: UI → App → SDK → Domain → Physics, 역방향 금지.

# 별도 파일 .importlinter 권장:
#
# [importlinter]
# root_packages =
#     workbench
#
# [importlinter:contract:layers]
# name = Layer dependency
# type = layers
# layers =
#     workbench.ui
#     workbench.app
#     workbench.sdk
#     workbench.domain
#     workbench.physics
